Fix alignment of the overlap text in safari, issue #77

--- a/src/illustrations/OverlapBox.scss
+++ b/src/illustrations/OverlapBox.scss
@@ -64,8 +64,9 @@
 	min-height: 70px;
 
     div {
-      position: relative;
+      position: absolute;
       top: 50%;
+      width: 100%;
       transform: translateY(-50%);
     }
   }
